tcos-configurator (1.20) unstable; urgency=low

  * Add option 16 (swap-server) used by udhcpc
  * Makefile: Add Debian Squeeze
  * debian/copyright: Machine readable debian/copyright format
  * update debian/copyright
  * setu.py add license
  * tcos-configurator: fix combo_interface_change() nm iface detection
  * tcos-configurator: add --simulate option and don't write gateway if not needed

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 25 Feb 2011 22:40:56 +0100

tcos-configurator (1.19) unstable; urgency=low

  * check for /etc/gdm3 dir, schemas is moved to /usr/share/gdm
  * debian/control: Update GIT URL
  * tcos-configurator: Use /var/lib/max-netboot as TFTPBOOT if exists

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sat, 18 Dec 2010 15:36:21 +0100

tcos-configurator (1.18) unstable; urgency=low

  * tcos-configurator: use bigger limits to allow more clients in GDM
  * Makefile: add jaunty karmic and lucid patch
  * setup.py: read version from debian/changelog to use in setup class
  * put option 49 xserver and 48 font-servers, and create
    /etc/gdm3/daemon.log
  * fix GDM_CONFIG var and add all xdmcp settings when enabling

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Thu, 17 Jun 2010 22:17:29 +0200

tcos-configurator (1.17) unstable; urgency=low

  * Use MaxSessions=30 as default for GDM
  * Create empty /etc/gdm/custom.conf if gdm.schemas is found

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 06 Apr 2010 17:41:20 +0200

tcos-configurator (1.16) unstable; urgency=low

  * support configuration of KDM, update Spanish translation

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 08 Nov 2009 14:49:55 +0100

tcos-configurator (1.15) unstable; urgency=low

  * fix exception when gateway is empty

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 04 Oct 2009 16:11:25 +0200

tcos-configurator (1.14) unstable; urgency=low

  * Remove obsolete patch targets