@@ -2,8 +2,8 @@ Source: tcos-configurator
 Section: gnome
 Priority: optional
 Maintainer: Mario Izquierdo (mariodebian) <mariodebian@gmail.com>
-Build-Depends: debhelper (>= 7.0.0), cdbs, python, python-support
-Standards-Version: 3.8.0
+Build-Depends: debhelper (>= 7.0.0), python (>= 2.6.6-3~)
+Standards-Version: 3.9.2
 Vcs-Git: http://tcosproject.org/git/tcos-configurator.git
 Vcs-Browser: http://tcosproject.org/cgit/tcos-configurator.git/
 Homepage: http://www.tcosproject.org
@@ -11,8 +11,9 @@ Homepage: http://www.tcosproject.org
 Package: tcos-configurator
 Architecture: all
 Depends: tcosconfig, gksu, python-gtk2, python-glade2, python-netifaces, 
-         python-configobj, ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}
+         python-configobj, ${misc:Depends}, ${shlibs:Depends}
 Description: PyGTK tool to configure some needed services to get a TCOS server
- Contains:
-  * tcos-configurator
+ This tool configure dnsmasq or isc-dhcp-server to boot TCOS thin clients.
+ .
+ You can create users, configure autologin or launch TcosConfig too.
 
