@@ -1,18 +1,13 @@
 #!/usr/bin/make -f
 
-DEB_PYTHON_SYSTEM=pysupport
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
-
-build/tcos-configurator::
-	make
+%:
+	dh $@ --with python2
 
 
-binary-install/tcos-configurator::
-	# clean svn dirs
-	find $(CURDIR)/debian/tcos-configurator -type d -name .svn | xargs rm -rf --
-	mkdir -p $(CURDIR)/debian/tcos-configurator/usr/sbin
-	mv $(CURDIR)/debian/tcos-configurator/usr/bin/tcos-configurator $(CURDIR)/debian/tcos-configurator/usr/sbin/tcos-configurator
-	rmdir $(CURDIR)/debian/tcos-configurator/usr/bin
-	dh_desktop
+override_dh_auto_clean:
+	dh_auto_clean
+	cd po && make clean
+	
+
+
+.PHONY: override_dh_auto_clean
